# revisaoresidencia

./: CMakeLists.txt  LICENSE  README.md  diagram.json  revisaoresidencia.c  wokwi.toml
include/: font.h
